# CatColab

./: .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  .rustfmt.toml  .stylelintrc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.nix  Cargo.toml  LICENSE  LICENSE-MIT  PRIVACY.md  README.md  biome.json  configuration.nix  db_2026-01-21_09-24-38.sql  doc.md  flake.nix  notes.md  oxlint.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rush.json  rust-toolchain.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: setup.sh
.github/workflows/: build.yml  ci.yml  db-dump-tests.yml  deploy-preview.yml  deploy-prod.yml  deploy-staging.yml  deploy-target.yml  deploy.yml  dev-docs.yml  devdocs.yml  github-pr-sync-with-notion.yml  julia-tests.yml  macos.yml  staging-tests.yml  ui-components-tests.yml  vite-plugin-monorepo-dedupe.yml
.netlify-env/: package-lock.json  pnpm-lock.yaml
.zed/: settings.json
catlog/: Cargo.toml
catlog/src/: category.rs  column.rs  fin_category.rs  graph.rs  iterable.rs  lib.rs  mapping.rs  path.rs  set.rs  validate.rs
catlog/src/dbl/: computad.rs  diagram.rs  mod.rs  model.rs  pasting.rs  theory.rs
catlog/src/one/: category.rs  fin_category.rs  graph.rs  mod.rs  path.rs
catlog/src/stdlib/: mod.rs  theories.rs
catlog/src/zero/: column.rs  mod.rs  set.rs
catlog/src/zero/directories/: mod.rs  nonemptymap.rs  paths.rs
dev-docs/: .gitignore  Dockerfile  README.md  build.sh  checksums.txt  ci-build.sh  database-management.md  default.nix  fixing-hash-mismatches.md  forest.toml  index.ts  package.json  pnpm-lock.yaml  secret-management.md  secrets.md  serve.sh  shell.nix  static.patch  typedoc.json  watch.sh
dev-docs/docs/: testing-guide.md  workflows.md
dev-docs/theme/: custom.css  forest.xsl  style.css  tree.xsl
dev-docs/trees/: bib-0001.tree  dbl-0001.tree  dbl-0002.tree  dbl-0004.tree  dbl-0005.tree  dbl-0006.tree  dbl-0007.tree  dbl-0008.tree  dbl-0009.tree  dbl-000B.tree  dbl-000C.tree  dbl-000D.tree  dbl-000E.tree  dbl-000G.tree  dbl-000H.tree  dbl-000I.tree  dct-0001.tree  dct-0002.tree  dct-0003.tree  dct-0004.tree  dct-0005.tree  dct-0006.tree  dct-0007.tree  dct-0008.tree  dct-000A.tree  dev-0001.tree  dev-0002.tree  dev-0003.tree  dev-0004.tree  dev-0005.tree  dev-0006.tree  dev-0007.tree  dev-0008.tree  dev-0009.tree  dev-000A.tree  dev-000B.tree  dev-000C.tree  dev-000D.tree  dev-000E.tree  dev-000F.tree  (+11 more)
frontend/: .env.development  .env.production  biome.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/catlog-wasm/: Cargo.toml
frontend/catlog-wasm/src/: lib.rs  model.rs  theories.rs  theory.rs
frontend/src/: App.css  App.tsx  automerge-solid.ts  index.css  index.tsx
infrastructure/: .gitignore  README.md  biome.nix  catcolab-api.nix  devshell.nix  ec2-setup.md  flake.nix  generated-bindings-check.nix  julia.nix  netlify-preview.nix  packages.nix  pnpm-deps.nix  rust-docs.nix  rust.nix  site.nix  socket.ts  ssh-keys.nix
infrastructure/checks/: default.nix  generated-bindings-check.nix  npm-checks.nix  rust-clippy.nix  rust-fmt.nix  rust-tests.nix
infrastructure/hosts/: default.nix
infrastructure/lib/: default.nix  modules.nix  utils.nix
infrastructure/modules/: backend.nix  backup.nix  catcolab-backup.nix  catcolab-host.nix  catcolab.nix  host.nix
infrastructure/scripts/: backup.sh  build.sh  catcom  cc-utils  cc-utils-db.sh  cc-utils-lib.sh  cc-utils-vm.sh  database-setup.sh  db-utils  db-utils-lib.sh  db-utils.sh  dump-analysis-docs  dump-notebook-fixtures  hard-delete-corrupt-analysis-refs  initdb.sh  migrate.sh  restart.sh  start.sh  status.sh  stop.sh
infrastructure/secrets/: .env.age  .env.next.age  DATABASE_URL.age  env.next.age  env.prod.age  example-secrets.env  instrument.mjs.age  rclone.conf.age  rclone.conf.next.age  rclone.conf.prod.age  secrets.nix
infrastructure/shell/: default.nix
infrastructure/tests/: frontend.nix  integration.nix
math/: README.md
math-docs/: README.md  checksums.txt  default.nix  forest.toml  forester  serve.sh  shell.nix
math-docs/theme/: custom.css  metadata.xsl  style.css  tree.xsl
math-docs/trees/: bib-0002.tree  bib-0003.tree  dbl-0001.tree  dbl-0004.tree  dbl-0005.tree  dbl-0007.tree  dbl-0008.tree  dbl-0009.tree  dbl-000A.tree  dbl-000C.tree  dbl-000F.tree  dct-0001.tree  dct-0003.tree  dct-0004.tree  dct-0005.tree  dct-0007.tree  dct-0008.tree  dct-0009.tree  dct-000A.tree  dct-000B.tree  dct-000C.tree  dct-000D.tree  dct-000E.tree  dct-000F.tree  dct-000G.tree  dct-000H.tree  dct-000I.tree  dct-000J.tree  dct-000K.tree  dct-000L.tree  dct-000M.tree  dct-000N.tree  dct-000O.tree  dct-000P.tree  inst-0001.tree  macros.tree  mat-0001.tree  mdt-0002.tree  mdt-0003.tree  mdt-0004.tree  (+35 more)
math/trees/: bib-0002.tree  mat-0001.tree
patches/: @hashintel__ds-helpers@0.2.1.patch  wasm-pack@0.14.0.patch
relation-macro-editor/: package-lock.json  package.json
relation-macro-editor/src/: App.css  App.tsx  Doc.tsx  ProseMirror.tsx  RelationSchema.ts  ResourceSharer.ts  prosemirror.css  schema.ts
rfc/: .gitignore  0001.md  0002.md  0003.md  0004.md  0005.md  0006.md  0009.md  _macros.qmd  _quarto.yml  _references.bib  chicago-author-date.csl  custom.scss  filters.lua  index.md
rfc/_site/: 0001.html  0002.html  index.html  search.json
rfc/_templates/: tikz.tex
rfc/auto/: _references.el
rfc/nonactionable/: 0003.md  0005.md
rfcs/: 0001.md  _macros.qmd  _quarto.yml  _references.bib
scripts/: ci.sh  dev-docs.sh  devdocs.sh  package.json
(+195 files in other folders)
