[workspace]
resolver = "2"

# Note that we define member crates with a wildcard here and NOT with explicit paths because the
# flake.nix is written in a way such that top-level members are built as different derivations which
# avoid being rebuilt if the other package's sources change.
members = ["packages/*"]

exclude = [
  "packages/algjulia-interop",
  "packages/frontend",
  "packages/patchwork",
  "packages/ui-components",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.metadata.crane]
name = "my-workspace"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# Optimize dependencies in development.
# This is mainly for automerge: https://github.com/automerge/automerge/issues/1159#issuecomment-3951484849
# However there may be no practical downside to leaving this on even if that issue is resolved.
[profile.dev.package."*"]
opt-level = 3
