[workspace]
resolver = "2"

# Note that we define member crates with a wildcard here and NOT with explicit paths because the
# flake.nix is written in a way such that top-level members are built as different derivations which
# avoid being rebuilt if the other package's sources change.
members = ["packages/*"]

exclude = [
  "packages/algjulia-interop",
  "packages/frontend",
  "packages/patchwork",
  "packages/ui-components",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.metadata.crane]
name = "my-workspace"

[patch.crates-io]
ts-rs = { git = "https://github.com/ToposInstitute/ts-rs", branch = "kb/order-by-ts-name" }
ts-rs-macros = { git = "https://github.com/ToposInstitute/ts-rs", branch = "kb/order-by-ts-name" }
qubit = { git = "https://github.com/ToposInstitute/qubit", branch = "kb/ts-rs-12" }
qubit-macros = { git = "https://github.com/ToposInstitute/qubit", branch = "kb/ts-rs-12" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
