[workspace]
resolver = "2"

# Note that we define member crates with a wildcard here and NOT with explicit paths because the
# flake.nix is written in a way such that top-level members are built as different derivations which
# avoid being rebuilt if the other package's sources change.
members = ["packages/*"]

exclude = [
  "packages/algjulia-interop",
  "packages/frontend",
  "packages/patchwork",
  "packages/ui-components",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.metadata.crane]
name = "my-workspace"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# Use optimizations and remove debug assertions as otherwise automerge is
# extremely slow in debug mode.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false

[patch.crates-io]
automerge = { git = "https://github.com/automerge/automerge", branch = "batch-insertion" }
