[package]
name = "catlog"
description = "A toolbox for catgorical logic based on double theories"
authors = ["Evan Patterson"]
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "nonempty/serialize", "ustr/serde"]
serde-wasm = ["serde", "dep:wasm-bindgen", "dep:tsify-next"]

[dependencies]
archery = "1"
derivative = "2"
derive_more = "0.99"
nonempty = "0.10"
ref-cast = "1"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"
tsify-next = { version = "0.5", features = ["js"], optional = true }
ustr = "1"
wasm-bindgen = { version = "0.2.92", optional = true }
