[package]
name = "catlog-wasm"
version = "0.1.0"
authors = ["Evan Patterson <evan@epatters.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
catlog = { path = "../../catlog" }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
ustr = "1.0.0"
js-sys = "0.3.69"
derivative = "2.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
