[package]
name = "catlog-wasm"
version = "0.1.0"
authors = ["Evan Patterson <evan@epatters.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
catlog = { path = "../../catlog", features = ["serde-wasm"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.69"
nonempty = { version = "0.10", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
tsify-next = { version = "0.5", features = ["js"] }
ustr = "1"
uuid = { version = "1.10", features = ["v7", "serde", "js"] }
wasm-bindgen = "0.2.92"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
